--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "3389832"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f1d45bb3850>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f01893a02b0>"
       ]
      },
      "execution_count": 9,
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "[524356 rows x 4 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,271 +630,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "prova_ch_azul_p = prova_ch.groupby(\"Azul\").size().reset_index(name='P')\n",
     "prova_ch_amarela_p = prova_ch.groupby(\"Amarela\").size().reset_index(name='P')\n",
     "prova_ch_branca_p = prova_ch.groupby(\"Branca\").size().reset_index(name='P')\n",
-    "prova_ch_rosa_p = prova_ch.groupby(\"Rosa\").size().reset_index(name='P')"
+    "prova_ch_rosa_p = prova_ch.groupby(\"Rosa\").size().reset_index(name='P')\n",
+    "\n",
+    "prova_cn_azul_p = prova_cn.groupby(\"Azul\").size().reset_index(name='P')\n",
+    "prova_cn_amarela_p = prova_cn.groupby(\"Amarela\").size().reset_index(name='P')\n",
+    "prova_cn_cinza_p = prova_cn.groupby(\"Cinza\").size().reset_index(name='P')\n",
+    "prova_cn_rosa_p = prova_cn.groupby(\"Rosa\").size().reset_index(name='P')\n",
+    "\n",
+    "prova_lc_azul_p = prova_lc.groupby(\"Azul\").size().reset_index(name='P')\n",
+    "prova_lc_amarela_p = prova_lc.groupby(\"Amarela\").size().reset_index(name='P')\n",
+    "prova_lc_branca_p = prova_lc.groupby(\"Branca\").size().reset_index(name='P')\n",
+    "prova_lc_rosa_p = prova_lc.groupby(\"Rosa\").size().reset_index(name='P')\n",
+    "\n",
+    "prova_mt_azul_p = prova_mt.groupby(\"Azul\").size().reset_index(name='P')\n",
+    "prova_mt_amarela_p = prova_mt.groupby(\"Amarela\").size().reset_index(name='P')\n",
+    "prova_mt_cinza_p = prova_mt.groupby(\"Cinza\").size().reset_index(name='P')\n",
+    "prova_mt_rosa_p = prova_mt.groupby(\"Rosa\").size().reset_index(name='P')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4659\n",
-      "4679\n",
-      "4670\n",
-      "4672\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(prova_ch_azul_p))\n",
-    "print(len(prova_ch_amarela_p))\n",
-    "print(len(prova_ch_branca_p))\n",
-    "print(len(prova_ch_rosa_p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Azul  PAzul  Amarela  PAmarela  Branca  PBranca   Rosa  PRosa\n",
-      "0       0.0    355      0.0       363     0.0      393    0.0    342\n",
-      "1     328.9     37    328.9        51   328.9       46  328.9     52\n",
-      "2     329.0      2    329.0         8   329.0        2  329.0      2\n",
-      "3     329.2      1    329.2         9   329.2        1  329.2      5\n",
-      "4     329.3      1    329.3         7   329.3        1  329.3      4\n",
-      "...     ...    ...      ...       ...     ...      ...    ...    ...\n",
-      "4581  824.0     11    824.0         9   824.0        8  824.0      8\n",
-      "4582  827.0      8    827.0         5   827.0        9  827.0     14\n",
-      "4583  832.3      4    832.3         6   832.3        4  832.3      8\n",
-      "4584  832.5     18    832.5        14   832.5       11  832.5     18\n",
-      "4585  846.9     13    846.9        12   846.9       12  846.9     15\n",
-      "\n",
-      "[4586 rows x 8 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "merged_df = pd.merge(prova_ch_azul_p, prova_ch_amarela_p, how=\"inner\", left_on=\"Azul\", right_on=\"Amarela\", suffixes=[\"Azul\", \"Amarela\"])\n",
-    "merged_df = pd.merge(merged_df, prova_ch_branca_p, how=\"inner\", left_on=\"Azul\", right_on=\"Branca\", suffixes=[\"\", \"Branca\"])\n",
-    "merged_df = pd.merge(merged_df, prova_ch_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Branca\", \"Rosa\"])\n",
-    "print(merged_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for column in merged_df:\n",
-    "    if column.startswith(\"P\"):\n",
-    "        merged_df[column] = merged_df[column] / merged_df[column].sum()"
+    "prova_ch_p = pd.merge(prova_ch_azul_p, prova_ch_amarela_p, how=\"inner\", left_on=\"Azul\", right_on=\"Amarela\", suffixes=[\"Azul\", \"Amarela\"])\n",
+    "prova_ch_p = pd.merge(prova_ch_p, prova_ch_branca_p, how=\"inner\", left_on=\"Azul\", right_on=\"Branca\", suffixes=[\"\", \"Branca\"])\n",
+    "prova_ch_p = pd.merge(prova_ch_p, prova_ch_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Branca\", \"Rosa\"])\n",
+    "\n",
+    "prova_cn_p = pd.merge(prova_cn_azul_p, prova_cn_amarela_p, how=\"inner\", left_on=\"Azul\", right_on=\"Amarela\", suffixes=[\"Azul\", \"Amarela\"])\n",
+    "prova_cn_p = pd.merge(prova_cn_p, prova_cn_cinza_p, how=\"inner\", left_on=\"Azul\", right_on=\"Cinza\", suffixes=[\"\", \"Cinza\"])\n",
+    "prova_cn_p = pd.merge(prova_cn_p, prova_cn_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Cinza\", \"Rosa\"])\n",
+    "\n",
+    "prova_lc_p = pd.merge(prova_lc_azul_p, prova_lc_amarela_p, how=\"inner\", left_on=\"Azul\", right_on=\"Amarela\", suffixes=[\"Azul\", \"Amarela\"])\n",
+    "prova_lc_p = pd.merge(prova_lc_p, prova_lc_branca_p, how=\"inner\", left_on=\"Azul\", right_on=\"Branca\", suffixes=[\"\", \"Branca\"])\n",
+    "prova_lc_p = pd.merge(prova_lc_p, prova_lc_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Branca\", \"Rosa\"])\n",
+    "\n",
+    "prova_mt_p = pd.merge(prova_mt_azul_p, prova_mt_amarela_p, how=\"inner\", left_on=\"Azul\", right_on=\"Amarela\", suffixes=[\"Azul\", \"Amarela\"])\n",
+    "prova_mt_p = pd.merge(prova_mt_p, prova_mt_cinza_p, how=\"inner\", left_on=\"Azul\", right_on=\"Cinza\", suffixes=[\"\", \"Cinza\"])\n",
+    "prova_mt_p = pd.merge(prova_mt_p, prova_mt_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Cinza\", \"Rosa\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in prova_ch_p:\n",
+    "    if column.startswith(\"P\"):\n",
+    "        prova_ch_p[column] = prova_ch_p[column] / prova_ch_p[column].sum()\n",
+    "\n",
+    "for column in prova_cn_p:\n",
+    "    if column.startswith(\"P\"):\n",
+    "        prova_cn_p[column] = prova_cn_p[column] / prova_cn_p[column].sum()\n",
+    "\n",
+    "for column in prova_lc_p:\n",
+    "    if column.startswith(\"P\"):\n",
+    "        prova_lc_p[column] = prova_lc_p[column] / prova_lc_p[column].sum()\n",
+    "\n",
+    "for column in prova_mt_p:\n",
+    "    if column.startswith(\"P\"):\n",
+    "        prova_mt_p[column] = prova_mt_p[column] / prova_mt_p[column].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Azul</th>\n",
-       "      <th>PAzul</th>\n",
-       "      <th>Amarela</th>\n",
-       "      <th>PAmarela</th>\n",
-       "      <th>Branca</th>\n",
-       "      <th>PBranca</th>\n",
-       "      <th>Rosa</th>\n",
-       "      <th>PRosa</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000687</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000693</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000760</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>328.9</td>\n",
-       "      <td>0.000072</td>\n",
-       "      <td>328.9</td>\n",
-       "      <td>0.000097</td>\n",
-       "      <td>328.9</td>\n",
-       "      <td>0.000089</td>\n",
-       "      <td>328.9</td>\n",
-       "      <td>0.000100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>329.0</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>329.0</td>\n",
-       "      <td>0.000015</td>\n",
-       "      <td>329.0</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>329.0</td>\n",
-       "      <td>0.000004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>329.2</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>329.2</td>\n",
-       "      <td>0.000017</td>\n",
-       "      <td>329.2</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>329.2</td>\n",
-       "      <td>0.000010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>329.3</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>329.3</td>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>329.3</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>329.3</td>\n",
-       "      <td>0.000008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4581</th>\n",
-       "      <td>824.0</td>\n",
-       "      <td>0.000021</td>\n",
-       "      <td>824.0</td>\n",
-       "      <td>0.000017</td>\n",
-       "      <td>824.0</td>\n",
-       "      <td>0.000015</td>\n",
-       "      <td>824.0</td>\n",
-       "      <td>0.000015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4582</th>\n",
-       "      <td>827.0</td>\n",
-       "      <td>0.000015</td>\n",
-       "      <td>827.0</td>\n",
-       "      <td>0.000010</td>\n",
-       "      <td>827.0</td>\n",
-       "      <td>0.000017</td>\n",
-       "      <td>827.0</td>\n",
-       "      <td>0.000027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4583</th>\n",
-       "      <td>832.3</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>832.3</td>\n",
-       "      <td>0.000011</td>\n",
-       "      <td>832.3</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>832.3</td>\n",
-       "      <td>0.000015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4584</th>\n",
-       "      <td>832.5</td>\n",
-       "      <td>0.000035</td>\n",
-       "      <td>832.5</td>\n",
-       "      <td>0.000027</td>\n",
-       "      <td>832.5</td>\n",
-       "      <td>0.000021</td>\n",
-       "      <td>832.5</td>\n",
-       "      <td>0.000035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4585</th>\n",
-       "      <td>846.9</td>\n",
-       "      <td>0.000025</td>\n",
-       "      <td>846.9</td>\n",
-       "      <td>0.000023</td>\n",
-       "      <td>846.9</td>\n",
-       "      <td>0.000023</td>\n",
-       "      <td>846.9</td>\n",
-       "      <td>0.000029</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4586 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Azul     PAzul  Amarela  PAmarela  Branca   PBranca   Rosa     PRosa\n",
-       "0       0.0  0.000687      0.0  0.000693     0.0  0.000760    0.0  0.000660\n",
-       "1     328.9  0.000072    328.9  0.000097   328.9  0.000089  328.9  0.000100\n",
-       "2     329.0  0.000004    329.0  0.000015   329.0  0.000004  329.0  0.000004\n",
-       "3     329.2  0.000002    329.2  0.000017   329.2  0.000002  329.2  0.000010\n",
-       "4     329.3  0.000002    329.3  0.000013   329.3  0.000002  329.3  0.000008\n",
-       "...     ...       ...      ...       ...     ...       ...    ...       ...\n",
-       "4581  824.0  0.000021    824.0  0.000017   824.0  0.000015  824.0  0.000015\n",
-       "4582  827.0  0.000015    827.0  0.000010   827.0  0.000017  827.0  0.000027\n",
-       "4583  832.3  0.000008    832.3  0.000011   832.3  0.000008  832.3  0.000015\n",
-       "4584  832.5  0.000035    832.5  0.000027   832.5  0.000021  832.5  0.000035\n",
-       "4585  846.9  0.000025    846.9  0.000023   846.9  0.000023  846.9  0.000029\n",
-       "\n",
-       "[4586 rows x 8 columns]"
+       "1.0"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "merged_df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
