--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -316,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f01893a02b0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f7197ff7700>"
       ]
      },
      "execution_count": 9,
@@ -675,7 +675,17 @@
     "\n",
     "prova_mt_p = pd.merge(prova_mt_azul_p, prova_mt_amarela_p, how=\"inner\", left_on=\"Azul\", right_on=\"Amarela\", suffixes=[\"Azul\", \"Amarela\"])\n",
     "prova_mt_p = pd.merge(prova_mt_p, prova_mt_cinza_p, how=\"inner\", left_on=\"Azul\", right_on=\"Cinza\", suffixes=[\"\", \"Cinza\"])\n",
-    "prova_mt_p = pd.merge(prova_mt_p, prova_mt_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Cinza\", \"Rosa\"])"
+    "prova_mt_p = pd.merge(prova_mt_p, prova_mt_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Cinza\", \"Rosa\"])\n",
+    "\n",
+    "# Remove redundant columns\n",
+    "prova_ch_p = prova_ch_p.drop([\"Amarela\", \"Branca\", \"Rosa\"], axis=1)\n",
+    "prova_ch_p = prova_ch_p.rename(columns={\"Azul\": \"Score\"})\n",
+    "prova_cn_p = prova_cn_p.drop([\"Amarela\", \"Cinza\", \"Rosa\"], axis=1)\n",
+    "prova_cn_p = prova_cn_p.rename(columns={\"Azul\": \"Score\"})\n",
+    "prova_lc_p = prova_lc_p.drop([\"Amarela\", \"Branca\", \"Rosa\"], axis=1)\n",
+    "prova_lc_p = prova_lc_p.rename(columns={\"Azul\": \"Score\"})\n",
+    "prova_mt_p = prova_mt_p.drop([\"Amarela\", \"Cinza\", \"Rosa\"], axis=1)\n",
+    "prova_mt_p = prova_mt_p.rename(columns={\"Azul\": \"Score\"})"
    ]
   },
   {
@@ -703,28 +713,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score</th>\n",
+       "      <th>PAzul</th>\n",
+       "      <th>PAmarela</th>\n",
+       "      <th>PCinza</th>\n",
+       "      <th>PRosa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000112</td>\n",
+       "      <td>0.000098</td>\n",
+       "      <td>0.000156</td>\n",
+       "      <td>0.000122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>353.8</td>\n",
+       "      <td>0.000066</td>\n",
+       "      <td>0.000090</td>\n",
+       "      <td>0.000066</td>\n",
+       "      <td>0.000066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>354.0</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>0.000006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>354.2</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>0.000017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>354.4</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>0.000014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5459</th>\n",
+       "      <td>935.5</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5460</th>\n",
+       "      <td>944.1</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.000042</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>0.000042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5461</th>\n",
+       "      <td>948.5</td>\n",
+       "      <td>0.000043</td>\n",
+       "      <td>0.000038</td>\n",
+       "      <td>0.000054</td>\n",
+       "      <td>0.000033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5462</th>\n",
+       "      <td>948.8</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.000036</td>\n",
+       "      <td>0.000039</td>\n",
+       "      <td>0.000029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5463</th>\n",
+       "      <td>953.1</td>\n",
+       "      <td>0.000056</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>0.000033</td>\n",
+       "      <td>0.000052</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5464 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1.0"
+       "      Score     PAzul  PAmarela    PCinza     PRosa\n",
+       "0       0.0  0.000112  0.000098  0.000156  0.000122\n",
+       "1     353.8  0.000066  0.000090  0.000066  0.000066\n",
+       "2     354.0  0.000006  0.000008  0.000006  0.000006\n",
+       "3     354.2  0.000010  0.000015  0.000017  0.000017\n",
+       "4     354.4  0.000014  0.000031  0.000010  0.000014\n",
+       "...     ...       ...       ...       ...       ...\n",
+       "5459  935.5  0.000002  0.000004  0.000002  0.000004\n",
+       "5460  944.1  0.000035  0.000042  0.000058  0.000042\n",
+       "5461  948.5  0.000043  0.000038  0.000054  0.000033\n",
+       "5462  948.8  0.000031  0.000036  0.000039  0.000029\n",
+       "5463  953.1  0.000056  0.000040  0.000033  0.000052\n",
+       "\n",
+       "[5464 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "prova_mt_p"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008959253222386014\n",
+      "0.009166704922090159\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def KLDivergence(x:pd.DataFrame, y:pd.DataFrame):\n",
+    "    px = np.array(x)\n",
+    "    py = np.array(y)\n",
+    "    return np.sum(np.where(px != 0, px * np.log(px / py), 0))\n",
+    "\n",
+    "print(KLDivergence(prova_ch_p[\"PAzul\"], prova_ch_p[\"PAmarela\"]))\n",
+    "print(KLDivergence(prova_ch_p[\"PAmarela\"], prova_ch_p[\"PAzul\"]))"
+   ]
   }
  ],
  "metadata": {
