--- a/other idea.ipynb
+++ b/other idea.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment 1"
+    "# Experiment 1 (not really)"
    ]
   },
   {
