Added some experiments

--- a/experiment2/experiment2.ipynb
+++ b/experiment2/experiment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,18 +91,60 @@
     "                )\n",
     "            ), axis=1\n",
     "        )\n",
+    "    return S\n",
+    "\n",
+    "def scaled_cossine_similarity(vector:np.ndarray, subspace:VectorSpace) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Returns S = \\sum_{i=0}^{r-1} \\sigma_i \\frac{(x,\\phi_i)^2}{\\|x\\|\\|\\phi_i\\|}\n",
+    "    \"\"\"\n",
+    "    if vector.ndim > 2:\n",
+    "        raise(AssertionError(\"Cannot input tensor of ndim > 2\"))\n",
+    "    if vector.ndim == 1:\n",
+    "        vector = vector[np.newaxis, :]\n",
+    "    if vector.shape[1] != subspace.dim:\n",
+    "        raise(AssertionError(\"Vector dimension must be the same as VectorSpace dimension\"))       \n",
+    "\n",
+    "    vector = vector.astype(subspace.dtype)\n",
+    "\n",
+    "    S = np.inner(\n",
+    "            np.divide(\n",
+    "                np.matmul(vector, subspace.A.transpose())**2,\n",
+    "                np.matmul(\n",
+    "                    np.sqrt(\n",
+    "                        np.diag(\n",
+    "                            np.matmul(vector, vector.transpose()\n",
+    "                            )\n",
+    "                        )\n",
+    "                    )[np.newaxis, :].transpose(),\n",
+    "                    np.sqrt(\n",
+    "                        np.diag(\n",
+    "                            np.matmul(subspace.A, subspace.A.transpose())\n",
+    "                        )\n",
+    "                    )[np.newaxis, :]\n",
+    "                )\n",
+    "            ),\n",
+    "            np.array(subspace.singular_values, dtype=subspace.dtype)\n",
+    "        )\n",
     "    return S"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "761b6c34891443c198604d41848ee90e",
+       "model_id": "e94404213e4c4fc68b3c6a276caf1e02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,27 +159,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7\n",
-      "0.7\n",
-      "0.7\n",
-      "0.8\n",
-      "0.8\n",
-      "0.8\n",
-      "0.8\n",
-      "0.8\n",
-      "0.8\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "0.9\n",
-      "0.9\n",
-      "0.9\n",
-      "0.9\n",
-      "0.9\n",
-      "0.9\n",
-      "0.9\n"
+      "0.7 0.7\n",
+      "0.7 0.7\n",
+      "0.7 0.7\n",
+      "0.8 0.8\n",
+      "0.8 0.8\n",
+      "0.8 0.8\n",
+      "0.8 0.8\n",
+      "0.8 0.8\n",
+      "0.8 0.8\n",
+      "1.0 1.0\n",
+      "1.0 1.0\n",
+      "1.0 1.0\n",
+      "1.0 1.0\n",
+      "1.0 1.0\n",
+      "0.9 0.9\n",
+      "0.9 0.9\n",
+      "0.9 0.9\n",
+      "0.9 0.9\n",
+      "0.9 0.9\n",
+      "0.9 0.9\n",
+      "0.9 0.9\n"
      ]
     }
    ],
@@ -153,24 +195,49 @@
     "    # Generate Subspaces using pca (svd) and maintain the N biggest eigenvectors, energy(N) > energy(min_energy)\n",
     "    subset = set.pca(min_energy=min_energy)\n",
     "\n",
-    "    # Create a list of max likelihood using the traditional cossine similarity\n",
+    "    # Create a list of max likelihood using the traditional cossine similarity and the scaled cossine similarity\n",
     "    max_likelihood_cs = [None]*eval_data.shape[0]\n",
-    "    cs = [0]*eval_data.shape[0]\n",
+    "    cs_list = [0]*eval_data.shape[0]\n",
+    "    \n",
+    "    max_likelihood_scs = [None]*eval_data.shape[0]\n",
+    "    scs_list = [0]*eval_data.shape[0]\n",
     "\n",
     "    # Classify the eval_data\n",
     "    for subspace in subset:\n",
-    "        foo = cossine_similarity(eval_data, subspace)\n",
-    "        for i in range(len(foo)):\n",
-    "            if foo[i] > cs[i]: cs[i] = foo[i]; max_likelihood_cs[i] = subspace.label\n",
+    "        cs = cossine_similarity(eval_data, subspace)\n",
+    "        scs = scaled_cossine_similarity(eval_data, subspace)\n",
+    "        for i in range(len(cs)):\n",
+    "            if cs[i] > cs_list[i]: cs_list[i] = cs[i]; max_likelihood_cs[i] = subspace.label\n",
+    "            if scs[i] > scs_list[i]: scs_list[i] = scs[i]; max_likelihood_scs[i] = subspace.label\n",
     "\n",
-    "    correct_class = []\n",
+    "    correct_class_cs = []\n",
+    "    correct_class_scs = []\n",
     "    for l1, l2 in zip(max_likelihood_cs, eval_correct_labels):\n",
-    "        correct_class.append(l1 == l2)\n",
+    "        correct_class_cs.append(l1 == l2)\n",
+    "    for l1, l2 in zip(max_likelihood_scs, eval_correct_labels):\n",
+    "        correct_class_scs.append(l1 == l2)\n",
     "\n",
-    "    prediction_ratio = correct_class.count(True) / len(correct_class)\n",
+    "    prediction_ratio_cs = correct_class_cs.count(True) / len(correct_class_cs)\n",
+    "    prediction_ratio_scs = correct_class_scs.count(True) / len(correct_class_scs)\n",
     "\n",
-    "    print(prediction_ratio)\n",
-    "    "
+    "    print(prediction_ratio_cs, prediction_ratio_scs)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(subset[0].singular_values)"
    ]
   },
   {
